src/tests/testfiles/variable-declarations/2.txt
Error at 3:7: identifier a already taken by variable
int a;
    ^
